--- a/index.html
+++ b/index.html
@@ -3,7 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VoltGuard | Professional EV Charger Maintenance & Repair</title>
+  <title>EV Charger Repair & Maintenance | Melbourne FL 32940 | VoltGuard</title>
+  <meta name="description" content="Broken EV charger? VoltGuard provides expert repair and maintenance for Tesla, ChargePoint, and Blink stations in Viera and Melbourne, FL. Get your station back online today." />
+  <link rel="canonical" href="https://voltguard.homes/" />
+
+  <meta property="og:title" content="EV Charger Repair & Maintenance | Melbourne FL 32940 | VoltGuard" />
+  <meta property="og:description" content="Broken EV charger? VoltGuard provides expert repair and maintenance for Tesla, ChargePoint, and Blink stations in Viera and Melbourne, FL." />
+  <meta property="og:url" content="https://voltguard.homes/" />
+  <meta property="og:type" content="website" />
+
+  <!-- LocalBusiness + FAQ schema (update phone/address when final business details are confirmed) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "VoltGuard EV Maintenance",
+      "image": "https://voltguard.homes/logo.png",
+      "@id": "https://voltguard.homes",
+      "url": "https://voltguard.homes",
+      "telephone": "+15551234567",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "147 Mailbox St",
+        "addressLocality": "Melbourne",
+        "addressRegion": "FL",
+        "postalCode": "32940",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 28.2315,
+        "longitude": -80.7271
+      },
+      "servesDeliveryContent": true,
+      "areaServed": [
+        {"@type": "GeoShape", "addressZipCode": "32940"},
+        {"@type": "GeoShape", "addressZipCode": "32955"},
+        {"@type": "GeoShape", "addressZipCode": "32934"},
+        {"@type": "GeoShape", "addressZipCode": "32937"}
+      ],
+      "description": "Professional EV charger maintenance and repair specializing in orphaned or broken charging networks for property managers in Melbourne, FL.",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+        "opens": "08:00",
+        "closes": "18:00"
+      }
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Who can fix my broken EV charger in Melbourne, FL?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "VoltGuard specializes in repairing broken or 'orphaned' EV chargers in the 32940 zip code and surrounding Melbourne areas, even if your original installer is out of business."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How do I maintain an EV charging station at an apartment complex?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Regular maintenance involves hardware inspection, cable testing, and firmware updates. VoltGuard offers monthly uptime contracts to ensure 99% reliability for multi-family properties."
+          }
+        }
+      ]
+    }
+  </script>
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
@@ -29,6 +101,10 @@
           <a href="#problem" class="text-slate-600 hover:text-green-600 font-medium">The Problem</a>
           <a href="#services" class="text-slate-600 hover:text-green-600 font-medium">Services</a>
           <a href="#expertise" class="text-slate-600 hover:text-green-600 font-medium">Why Us</a>
+          <a href="/tesla-charger-repair/" class="text-slate-600 hover:text-green-600 font-medium">Tesla Repair</a>
+          <a href="/chargepoint-charger-repair/" class="text-slate-600 hover:text-green-600 font-medium">ChargePoint Repair</a>
+          <a href="/blink-charger-repair/" class="text-slate-600 hover:text-green-600 font-medium">Blink Repair</a>
+          <a href="/blog/ev-charger-installer-out-of-business/" class="text-slate-600 hover:text-green-600 font-medium">Help Articles</a>
           <a href="#contact" class="bg-green-600 hover:bg-green-700 text-white px-5 py-2.5 rounded-lg font-semibold transition">Get a Quote</a>
         </div>
       </div>
@@ -43,7 +119,7 @@
         Specialized in Resurrecting "Abandoned" Charger Networks
       </div>
       <h1 class="text-5xl md:text-6xl font-bold tracking-tight mb-6 leading-tight">
-        Your Chargers Are Broken.<br>
+        Expert EV Charger Repair &amp; Maintenance in Melbourne, FL.<br>
         <span class="text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500">We Fix Them.</span>
       </h1>
       <p class="mt-4 text-xl text-slate-300 max-w-3xl mx-auto mb-10">
@@ -254,7 +330,9 @@
 
   <footer class="bg-slate-900 text-slate-400 py-12 border-t border-slate-800">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-      <p>&copy; 2024 VoltGuard EV Maintenance. All rights reserved.</p>
+      <p class="font-semibold text-slate-300">EV charger repair Melbourne FL • Electric vehicle charger maintenance 32940 • Tesla Wall Connector repair Florida</p>
+      <p class="mt-2">Serving Viera, Rockledge, Suntree, Melbourne Park, and Palm Shores.</p>
+      <p class="mt-6">&copy; 2024 VoltGuard EV Maintenance. All rights reserved.</p>
     </div>
   </footer>
 
