--- a/index.html
+++ b/index.html
@@ -306,23 +306,19 @@
           </div>
         </div>
         <div class="p-10 md:w-1/2 bg-white">
-          <form class="space-y-4">
-            <div>
-              <label class="block text-sm font-medium text-slate-700 mb-1">Name</label>
-              <input type="text" class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" placeholder="Property Manager Name" />
-            </div>
-            <div>
-              <label class="block text-sm font-medium text-slate-700 mb-1">Property Name</label>
-              <input type="text" class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" placeholder="Apartment Complex" />
-            </div>
-            <div>
-              <label class="block text-sm font-medium text-slate-700 mb-1">Issue Description</label>
-              <textarea class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" rows="3" placeholder="e.g. 4 chargers offline, screens black..."></textarea>
-            </div>
-            <button type="button" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 rounded-lg transition" onclick="alert('Thank you. A technician will contact you shortly.')">
-              Request Assessment
-            </button>
-          </form>
+          <h3 class="text-xl font-bold text-slate-900 mb-3">Request service</h3>
+          <p class="text-slate-600 mb-5">Use this quick form so we capture the details we need and route it into our tracking sheet.</p>
+
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSemuhtkvhy4Noev3HFQAwaIbYmAk4u27ayrsXaDmg10vLTRqQ/viewform"
+            target="_blank"
+            rel="noopener"
+            class="block text-center w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 rounded-lg transition"
+          >
+            Request Assessment
+          </a>
+
+          <p class="text-xs text-slate-500 mt-3">Opens in a new tab.</p>
         </div>
       </div>
     </div>
