--- a/index.html
+++ b/index.html
@@ -286,109 +286,97 @@
   </section>
 
   <!-- CTA Section -->
-  <section id="contact" class="py-24 bg-white">
-    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="bg-blue-900 rounded-3xl overflow-hidden shadow-2xl flex flex-col md:flex-row">
-        <div class="p-10 md:w-1/2 text-white flex flex-col justify-center">
-          <h2 class="text-3xl font-bold mb-4">Let's Get Your Stations Online.</h2>
-          <p class="text-blue-200 mb-8">Stop losing money on broken infrastructure. Contact us for a free site assessment and diagnostic quote.</p>
-          <div class="flex items-center space-x-4 mb-4">
-            <div class="w-10 h-10 rounded-full bg-blue-800 flex items-center justify-center">
-              <i data-lucide="phone" class="w-5 h-5"></i>
-            </div>
-            <span class="font-semibold">(555) 123-4567</span>
-          </div>
-          <div class="flex items-center space-x-4">
-            <div class="w-10 h-10 rounded-full bg-blue-800 flex items-center justify-center">
-              <i data-lucide="mail" class="w-5 h-5"></i>
-            </div>
-            <span class="font-semibold">service@voltguard.com</span>
-          </div>
+  <section id="contact" class="bg-gray-50 py-16 px-4 sm:px-6 lg:px-8 font-sans">
+    <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+      <div>
+        <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">
+          Claim Your Free EV Station Diagnostic &amp; Performance Tune-Up
+        </h2>
+        <p class="mt-4 text-lg text-gray-600">
+          Stop letting unmanaged, glitchy chargers frustrate your tenants and cost you money. Let our local experts evaluate and optimize your property's EV infrastructure—at absolutely zero cost to you.
+        </p>
+        <div class="mt-8">
+          <h3 class="text-xl font-bold text-gray-900 mb-4">What's included in your free on-site visit?</h3>
+          <ul class="space-y-4">
+            <li class="flex items-start">
+              <svg class="flex-shrink-0 h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+              </svg>
+              <p class="ml-3 text-base text-gray-700">
+                <strong class="text-gray-900">Full System Health Diagnostic:</strong> A complete, top-to-bottom review of your current hardware and network setup.
+              </p>
+            </li>
+            <li class="flex items-start">
+              <svg class="flex-shrink-0 h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+              </svg>
+              <p class="ml-3 text-base text-gray-700">
+                <strong class="text-gray-900">Firmware Refresh &amp; Port Calibration:</strong> We'll push the latest software syncs and calibrate your connection points for maximum charging efficiency.
+              </p>
+            </li>
+            <li class="flex items-start">
+              <svg class="flex-shrink-0 h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+              </svg>
+              <p class="ml-3 text-base text-gray-700">
+                <strong class="text-gray-900">Hardware Safety Inspection:</strong> Visual and physical checks for cable wear, holster damage, and voltage irregularities.
+              </p>
+            </li>
+          </ul>
         </div>
-        <div class="p-10 md:w-1/2 bg-white">
-          <h3 class="text-xl font-bold text-slate-900 mb-2">Claim your free consultation</h3>
-          <p class="text-slate-600 mb-4">
-            Free in-person consultation + system review for the <span class="font-semibold">first 30</span> properties that request service.
+        <div class="mt-8 bg-blue-50 p-6 rounded-lg border border-blue-100">
+          <h4 class="text-lg font-bold text-blue-900">Why are we giving this away?</h4>
+          <p class="mt-2 text-sm text-blue-800">
+            We want to prove how effortless EV management should be. While we're there, we'll show you how our <strong>Complete Care Plan</strong> takes 100% of the frustration off your plate. You get a dedicated tenant support portal, monthly on-site servicing to help guarantee uptime, and priority access to our rapid-response repair team and vendor network.
           </p>
-
-          <div id="vgWizard" class="space-y-4">
-            <div class="flex items-center justify-between text-xs text-slate-500">
-              <span id="vgStepLabel">Step 1 of 4</span>
-              <span class="font-mono" id="vgProgress">25%</span>
-            </div>
-            <div class="w-full h-2 bg-slate-100 rounded">
-              <div id="vgBar" class="h-2 bg-green-600 rounded" style="width:25%"></div>
-            </div>
-
-            <!-- Step 1: basics -->
-            <div class="vg-step" data-step="1">
-              <div class="space-y-3">
-                <div>
-                  <label class="block text-sm font-medium text-slate-700 mb-1">Name</label>
-                  <input id="vgName" type="text" class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" placeholder="Property manager name" />
-                </div>
-                <div>
-                  <label class="block text-sm font-medium text-slate-700 mb-1">Email <span class="text-red-600">*</span></label>
-                  <input id="vgEmail" type="email" required class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" placeholder="you@company.com" />
-                </div>
-                <div>
-                  <label class="block text-sm font-medium text-slate-700 mb-1">Phone</label>
-                  <input id="vgPhone" type="tel" class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" placeholder="(321) 555-1234" />
-                </div>
-              </div>
-            </div>
-
-            <!-- Step 2: equipment -->
-            <div class="vg-step hidden" data-step="2">
-              <div class="space-y-3">
-                <div>
-                  <label class="block text-sm font-medium text-slate-700 mb-1">Charger brand</label>
-                  <select id="vgBrand" class="w-full px-4 py-2 border border-slate-300 rounded-lg bg-white focus:ring-2 focus:ring-blue-500 focus:outline-none">
-                    <option value="">Select…</option>
-                    <option value="Tesla">Tesla</option>
-                    <option value="ChargePoint">ChargePoint</option>
-                    <option value="Blink">Blink</option>
-                    <option value="Wallbox">Wallbox</option>
-                    <option value="ClipperCreek">ClipperCreek</option>
-                    <option value="Other">Other</option>
-                  </select>
-                </div>
-                <div>
-                  <label class="block text-sm font-medium text-slate-700 mb-1">Service address or ZIP</label>
-                  <input id="vgAddressOrZip" type="text" class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" placeholder="32940 or full address" />
-                </div>
-              </div>
-            </div>
-
-            <!-- Step 3: issue -->
-            <div class="vg-step hidden" data-step="3">
-              <div class="space-y-3">
-                <div>
-                  <label class="block text-sm font-medium text-slate-700 mb-1">What’s going on?</label>
-                  <textarea id="vgIssue" class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" rows="4" placeholder="e.g. stations offline, payment failing, frayed cables…"></textarea>
-                  <p class="text-xs text-slate-500 mt-1">If there are safety hazards (frayed cables/exposed wiring), mark the unit out of service immediately.</p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Step 4: confirm -->
-            <div class="vg-step hidden" data-step="4">
-              <div class="rounded-lg border border-slate-200 p-4 bg-slate-50">
-                <p class="text-sm text-slate-700"><span class="font-semibold">Offer:</span> Free in-person consultation + system review (first 30 submissions)</p>
-                <p class="text-xs text-slate-500 mt-2">We’ll respond within 48 hours.</p>
-              </div>
-            </div>
-
-            <div class="flex gap-3">
-              <button id="vgBack" type="button" class="w-1/3 bg-slate-100 hover:bg-slate-200 text-slate-900 font-semibold py-3 rounded-lg transition hidden">Back</button>
-              <button id="vgNext" type="button" class="w-2/3 bg-green-600 hover:bg-green-700 text-white font-bold py-3 rounded-lg transition">Next</button>
-            </div>
-
-            <p id="vgError" class="hidden text-sm text-red-700"></p>
-            <p id="vgSuccess" class="hidden text-sm text-green-700 font-semibold">Submitted — we’ll be in touch within 48 hours.</p>
-            <p class="text-xs text-slate-500">By submitting, you agree to be contacted about your request. No spam.</p>
-          </div>
         </div>
+      </div>
+      <div class="bg-white rounded-xl shadow-xl p-8 border border-gray-100">
+        <h3 class="text-2xl font-bold text-gray-900 text-center mb-6">Where should we send our technician?</h3>
+        <form id="vgLeadForm" class="space-y-6">
+          <div>
+            <label for="vg_name" class="block text-sm font-medium text-gray-700">Full Name</label>
+            <div class="mt-1">
+              <input type="text" name="name" id="vg_name" required class="py-3 px-4 block w-full shadow-sm focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md bg-gray-50 text-gray-900">
+            </div>
+          </div>
+          <div>
+            <label for="vg_property" class="block text-sm font-medium text-gray-700">Property or Company Name</label>
+            <div class="mt-1">
+              <input type="text" name="property" id="vg_property" required class="py-3 px-4 block w-full shadow-sm focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md bg-gray-50 text-gray-900">
+            </div>
+          </div>
+          <div class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-4">
+            <div>
+              <label for="vg_email" class="block text-sm font-medium text-gray-700">Email</label>
+              <div class="mt-1">
+                <input type="email" name="email" id="vg_email" required class="py-3 px-4 block w-full shadow-sm focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md bg-gray-50 text-gray-900">
+              </div>
+            </div>
+            <div>
+              <label for="vg_phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
+              <div class="mt-1">
+                <input type="tel" name="phone" id="vg_phone" required class="py-3 px-4 block w-full shadow-sm focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md bg-gray-50 text-gray-900">
+              </div>
+            </div>
+          </div>
+          <div>
+            <label for="vg_chargers" class="block text-sm font-medium text-gray-700">How many chargers are on site?</label>
+            <select id="vg_chargers" name="chargers" class="mt-1 block w-full py-3 px-4 text-base border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md bg-gray-50 text-gray-900">
+              <option>1 - 2</option>
+              <option>3 - 5</option>
+              <option>6 - 10</option>
+              <option>11+</option>
+            </select>
+          </div>
+          <div>
+            <button id="vg_submit" type="submit" class="w-full inline-flex items-center justify-center px-6 py-4 border border-transparent rounded-md shadow-sm text-lg font-bold text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors">
+              Claim My Free Tune-Up
+            </button>
+          </div>
+          <p class="text-xs text-center text-gray-500 mt-4">No credit card required. We respect your privacy and will never sell your information.</p>
+          <p id="vg_form_status" class="text-sm text-center text-gray-700"></p>
+        </form>
       </div>
     </div>
   </section>
@@ -404,110 +392,81 @@
   <script>
     lucide.createIcons();
 
-    // VoltGuard wizard → Google Sheet via Apps Script web app
+    // VoltGuard lead form → Google Form (which writes to the VoltGuard Leads Sheet)
     (function(){
-      const ENDPOINT = 'https://script.google.com/macros/s/AKfycbyVvkbp2UeMLekaqoN7f5aSeOBJvXjbJNsxEKmugRsf1sKK2zE96nqomxzPZci5brYpWQ/exec';
-      const OFFER = 'Free in-person consultation + system review (first 30 submissions)';
+      const FORM_RESPONSE_URL = 'https://docs.google.com/forms/d/e/1FAIpQLSemuhtkvhy4Noev3HFQAwaIbYmAk4u27ayrsXaDmg10vLTRqQ/formResponse';
 
-      const el = (id) => document.getElementById(id);
-      const wizard = el('vgWizard');
-      if (!wizard) return;
+      // Google Form field IDs
+      const F = {
+        email: 'entry.41604213',
+        interest: 'entry.748079665',
+        ports: 'entry.1942805097',
+        name: 'entry.26020439',
+        phone: 'entry.1227474769',
+        brand: 'entry.730052324',
+        zip: 'entry.1104717921',
+        issue: 'entry.1720950844'
+      };
 
-      let step = 1;
-      const maxStep = 4;
+      const form = document.getElementById('vgLeadForm');
+      if (!form) return;
 
-      const steps = Array.from(wizard.querySelectorAll('.vg-step'));
+      const statusEl = document.getElementById('vg_form_status');
+      const submitBtn = document.getElementById('vg_submit');
 
-      function showError(msg){
-        const e = el('vgError');
-        e.textContent = msg;
-        e.classList.remove('hidden');
-      }
-      function clearError(){
-        const e = el('vgError');
-        e.textContent = '';
-        e.classList.add('hidden');
-      }
-
-      function setStep(n){
-        step = Math.max(1, Math.min(maxStep, n));
-        steps.forEach(s => {
-          const is = Number(s.getAttribute('data-step')) === step;
-          s.classList.toggle('hidden', !is);
-        });
-
-        const pct = Math.round((step / maxStep) * 100);
-        el('vgStepLabel').textContent = `Step ${step} of ${maxStep}`;
-        el('vgProgress').textContent = `${pct}%`;
-        el('vgBar').style.width = `${pct}%`;
-
-        el('vgBack').classList.toggle('hidden', step === 1);
-        el('vgNext').textContent = step === maxStep ? 'Submit' : 'Next';
+      function setStatus(msg){
+        if (!statusEl) return;
+        statusEl.textContent = msg || '';
       }
 
-      function getPayload(){
-        return {
-          origin: 'voltguard.homes',
-          offer: OFFER,
-          email: el('vgEmail').value,
-          name: el('vgName').value,
-          phone: el('vgPhone').value,
-          brand: el('vgBrand').value,
-          addressOrZip: el('vgAddressOrZip').value,
-          issue: el('vgIssue').value,
-          pageUrl: window.location.href,
-          userAgent: navigator.userAgent
-        };
-      }
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        setStatus('Submitting…');
+        if (submitBtn) submitBtn.disabled = true;
 
-      async function submit(){
-        clearError();
+        const name = (document.getElementById('vg_name')?.value || '').trim();
+        const property = (document.getElementById('vg_property')?.value || '').trim();
+        const email = (document.getElementById('vg_email')?.value || '').trim();
+        const phone = (document.getElementById('vg_phone')?.value || '').trim();
+        const chargers = (document.getElementById('vg_chargers')?.value || '').trim();
 
-        const email = (el('vgEmail').value || '').trim();
-        if (!email) {
-          setStep(1);
-          showError('Email is required.');
+        if (!name || !property || !email || !phone) {
+          setStatus('Please fill out all required fields.');
+          if (submitBtn) submitBtn.disabled = false;
           return;
         }
 
-        el('vgNext').disabled = true;
-        el('vgNext').classList.add('opacity-70');
+        const params = new URLSearchParams();
+        params.set(F.email, email);
+        params.set(F.name, name);
+        params.set(F.phone, phone);
+
+        // We’re not collecting these in the homepage form (yet), but keep the Google Form happy
+        params.set(F.interest, 'Maybe');
+        params.set(F.ports, chargers || '');
+        params.set(F.brand, 'Other');
+        params.set(F.zip, '');
+
+        // Put property name into the issue/details field so it lands in the sheet
+        params.set(F.issue, `Property/Company: ${property}\nChargers on site: ${chargers}`);
 
         try {
-          const res = await fetch(ENDPOINT, {
+          await fetch(FORM_RESPONSE_URL, {
             method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(getPayload())
+            mode: 'no-cors',
+            headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+            body: params.toString()
           });
 
-          const txt = await res.text();
-          let data = null;
-          try { data = JSON.parse(txt); } catch (_) {}
-
-          if (!res.ok || !data || data.ok !== true) {
-            throw new Error((data && data.error) ? data.error : 'submit_failed');
-          }
-
-          el('vgSuccess').classList.remove('hidden');
-          el('vgNext').textContent = 'Submitted';
-          el('vgBack').classList.add('hidden');
+          setStatus('Submitted — we’ll be in touch within 48 hours.');
+          form.reset();
         } catch (err) {
-          showError('Could not submit right now. Please try again in a minute.');
           console.error(err);
+          setStatus('Could not submit right now. Please try again in a minute.');
         } finally {
-          el('vgNext').disabled = false;
-          el('vgNext').classList.remove('opacity-70');
+          if (submitBtn) submitBtn.disabled = false;
         }
-      }
-
-      el('vgBack').addEventListener('click', () => { clearError(); setStep(step - 1); });
-      el('vgNext').addEventListener('click', () => {
-        clearError();
-        if (step < maxStep) return setStep(step + 1);
-        return submit();
       });
-
-      setStep(1);
     })();
   </script>
 </body>
